tests/Checker/everything/errors/4d.vc
void[] function() { }
int main() { return 1; }
